Now, where did I put those notes?

--- a/Files/CSS/Home.css
+++ b/Files/CSS/Home.css
@@ -42,7 +42,7 @@ div {
 }
 
 .logodiv {
-  max-width: 900px;
+  max-width: 50%;
   margin: auto;
   padding: 0 20px;
 }
@@ -69,7 +69,7 @@ div {
 
 .Top {
   display: absolute;
-  max-width: 900px;
+  max-width: 50%;
   margin: auto;
   padding: 0 20px;
 }
@@ -84,9 +84,9 @@ div {
   list-style-type: disc;
   margin-block-start: 1em;
   margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 40px;
+  margin-inline-start: 0%;
+  margin-inline-end: 0%;
+  padding-inline-start: 0%;
 }
 
 .unordered {
