--- a/Files/CSS/Home.css
+++ b/Files/CSS/Home.css
@@ -120,5 +120,21 @@ a:hover {
   text-decoration: underline;
 }
 
-
-
+@media only screen and (max-width: 600px) {
+  .Top {
+    max-width: 83%;
+  }
+  .logodiv {
+    max-width: 83%;
+  }
+  .logo {
+    width: 0%;
+    align-self: end;
+  }
+  .filter {
+    display: block;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    text-align: center;
+  }
+}
